test python client in author page
